--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
   <body>
     <div class="container">
       <header>
-        <img src="/assets/logo.png" alt="Logo" class="logo" />
-        <h1 class="heading">Formulário Desenvolvimento WEB II</h1>
+        <img src="/assets/image-removebg-preview.png" alt="Logo" class="logo" />
+        <h1 class="heading">Logar Conta</h1>
       </header>
       <form action="#" method="post" class="form">
         <div class="form-group">
-          <label for="nome">Nome:</label>
+          <label for="nome">Usuario:</label>
           <input type="text" id="nome" name="nome" required />
-        </div>
-        <div class="form-group">
-          <label for="telefone">Telefone:</label>
-          <input type="tel" id="telefone" name="telefone" required />
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required />
         </div>
         <div class="form-group">
-          <label for="descricao">Descrição sobre você:</label>
+          <label for="senha">Senha:</label>
+          <input type="password" id="senha" name="senha" required />
+        </div>
+        <div class="form-group">
+          <label for="descricao">Bio:</label>
           <textarea
             id="descricao"
             name="descricao"
@@ -51,14 +51,14 @@
         event.preventDefault();
         // Pega os valores dos campos do formulário
         const nome = document.getElementById("nome").value;
-        const telefone = document.getElementById("telefone").value;
+        const senha = document.getElementById("senha").value;
         const email = document.getElementById("email").value;
         const descricao = document.getElementById("descricao").value;
 
         // Cria uma variável com os dados do formulário
         const dados = {
           nome: nome,
-          telefone: telefone,
+          senha: senha,
           email: email,
           descricao: descricao,
         };
@@ -67,7 +67,7 @@
 
         try {
           // Faz uma requisição para a sua API
-          await fetch("INSIRA O LINK DA SUA API AQUI", {
+          await fetch("https://meu-primeiro-projeto.onrender.com/formulario", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
